# peppermint-prover

./: .dir-locals.el  .ghcid  .gitignore  README.md  cabal.project  peppermint.cabal  shell.nix  stack.yaml
generic-debruijn/: generic-debruijn.cabal
generic-debruijn/src/Data/Generics/: DeBruijn.hs
lensy-f/: LICENSE  README.md  lensy-f.cabal
lensy-f/examples/: Spec.hs
lensy-f/src/Control/: Tactic.hs  Tactics.hs
nix/: default.nix  ghc.nix
refined-experiment/: refined-experiment.cabal
refined-experiment/app/: Compile.hs  CongruenceClosure.hs  Main.hs  Refined.hs  UnionFind.hs
rfcs/: modules.md
src/: Binders.hs
test/binders/: Spec.hs
unfix-binders/: ChangeLog.md  README.md  unfix-binders.cabal
unfix-binders/src/Data/Binder/: Unfix.hs
